fix(core): address critical production issues in centrality computation
- Add Kahan summation to PageRank for floating-point precision on large graphs
- Add DoS protection: reject overly dense graphs (E > V*log(V)) for betweenness
- Fix betweenness edge case: return original map when all values are 0 (valid for star topologies)
- Replace Stack with ArrayDeque in bridge finding for better memory efficiency
- Add Collections import for Java 8 compatibility (Map.of is Java 9+)

This addresses 5 CRITICAL adversarial findings:
1. Integer overflow/precision loss in PageRank normalization
2. Stack overflow in bridge finding on deep graphs
3. Silent data corruption when betweenness max is 0
4. DoS vulnerability via O(n³) betweenness on complete graphs
5. Memory inefficiency in explicit stack usage

Also documents bug in TODOS.md:
- AnalyzeCommand has --json flag defined but not implemented
- Workaround: use view --format json instead

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>